--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,7 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
+              "src/data",
               "src/favicon.ico",
               "src/assets"
             ],
