--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "angular-highcharts": "^10.0.1",
     "bootstrap": "^3.4.1",
+    "chart.js": "^2.9.4",
+    "highcharts": "^8.2.2",
+    "ng2-charts": "^2.4.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
